  - Extend App icons zoom sizes up to 512px [BUG-21];
  - Allow to choose *.svg and *.svgz images for icons [BUG-21];
  - Add an app option to switch default/ambiance-light/ambiance-dark icon [BUG-21];
  - Use ISO country codes for translation files (required for: pootle, gentoo ebuild);
  - Use native language name for language selection;

Version 1.2-r2
 Added:
  - Czech translation update (thx 2 Pavel Fric);
 Fixed:
  - QtSystemApplication library detection does not work well for Qt5 [BUG-64];

Version 1.2-r1
 Added:
  - Deleting prefix does not remove prefix folder in ~/.local/share/wineprefixes [BUG-43];
 Fixed:
  - Fixed typo in Startup Wizard;
  - Fixup Wine Libs detection [BUG-50];
  - Remove Wine settings from App settings [BUG-50,BUG-23];
  - Make Wine64 libs optional (for x86 only platforms) [BUG-50];
  - Backup/Restore prefix path handler;
  - Can't use pre/post run scripts without standalone script [BUG-49];
  - Do not force startpage open;
  - add custom dll overrides outside from the list [BUG-60];
  - Revert "Kill dead online components" breaks the Qt5 build [BUG-62];
  - Do not build wineappdb core components if -DWITH_WINEAPPDB=OFF is set [BUG-62];
  - 'Run -> Browser' on Programs window not work [BUG-54];
  - QT5: Winetricks application list fails to refresh and causes segfault on quit [BUG-53];
  - Make -DQT5 flag visible during cmake build and runtime;
  - CLI: -v/-h options must not trigger nor database check nor wizard startup;
  - Remove useless and confusing appdb startup dialog;

Version 1.1-r2
 Fixed:
  - Error while loading application settings by key: 'WineLibs' [BUG-42];

Version 1.1-r1
 Fixed:
  - Error while loading application settings by key: 'WineLibs' [BUG-42];
  - Updated Afrikaans translation. thx 2 Danie Wessels;
  - Fixed cmake warnings;
  - Updated .desktop file;

Version 1.1
 Added:
  - extended list of a virtual desktop resolutions [BUG-35];