@@ -160,7 +160,6 @@ public:
      * \return Return the full path of binary.
      */
     QString getWhichOut (const QString fileName, bool showErr = true);
-    QStringList getWineLibsPath(void);
 
     /*! \brief This function get cdrom devices from /etc/fstab file.
      *
