@@ -8,6 +8,8 @@ Version 1.3
   - Add an app option to switch default/ambiance-light/ambiance-dark icon [BUG-21];
   - Use ISO country codes for translation files (required for: pootle, gentoo ebuild);
   - Use native language name for language selection;
+ Fixed:
+  - WineLibs paths are no longer strictly required [BUG-68];
 
 Version 1.2-r2
  Added:
